--- a/index.html
+++ b/index.html
@@ -1,26 +1,70 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/vue@2.7.13/dist/vue.js"></script>
+    <script src="https://kit.fontawesome.com/d483dae853.js" crossorigin="anonymous"></script>
   </head>
   
   <body>
     <div id="app">
       <h1>{{ header }}</h1>
       
-      <div class="add-task-form">
-        <input v-model="newTask" @keyup.enter="addTask" type="text" placeholder="Add task"/>
-        <button class="btn btn-primary" @click="addTask">Add Task</button>
+      <div class="top-bar">
+
+        <!-- Add task form -->
+        <div class="add-task-form">
+          <input 
+            class="add-task-input" 
+            v-model="newTask" 
+            @keydown.enter="addTask" 
+            type="text" 
+            placeholder="New task"
+          />
+          <button class="add-task-btn" @click="addTask">Add</button>
+        </div>
+
+        <!-- Search form -->
+        <input 
+          class="search-form" 
+          v-model="searchQuery" 
+          type="text" 
+          placeholder="Search Tasks"
+        />
+
       </div>
-      <ul v-if="tasks.length" class="task-list">  
-        <input v-model="searchQuery" type="text" placeholder="Search Tasks"/>
+
+      <!-- Todo list -->
+      <ul class="task-list">  
         <li v-for="(task, index) of searchResults" :key="index">
-        <span class="title" v-bind="index" contenteditable="true" v-on:keydown.enter="updateTask($event, task)" @:blur="updateTask($event, task)">{{ task }}</span>
-        <button class="remove" @click="deleteTask(index)">x</button></li>
+          <span 
+            class="list-item" 
+            v-bind="index" 
+            contenteditable="true" 
+            @keydown.enter="updateTask($event, task)" 
+            @:blur="updateTask($event, task)">
+            {{ task }}
+          </span>
+          <span class="buttons">
+            <button 
+              class="save-btn" 
+              v-bind="index" 
+              @click="updateTask($event, task)">
+              <span><i class="fa-solid fa-floppy-disk"></i></span>
+            </button>
+            <button 
+              class="delete-btn" 
+              @click="deleteTask(index)">
+              <span><i class="fa-solid fa-trash-can"></i></span>
+            </button>
+          </span>
+        </li>
       </ul>
-      <button v-bind="index" @click="updateTask($event, task)">Save</button>
-      <p v-else>No todos left!</p>
-      <span v-if="searchQuery">Total filtered results are : {{ totalSearchResults }}</span>
-      <span v-else>Total tasks are: {{ totalTasks }}</span>
+
+      <!-- Computed results -->
+      <div class="footer">
+        <span v-if="searchQuery">{{ totalSearchResults }} results found.</span>
+        <span v-else>You have {{ totalTasks }} pending tasks.</span>
+      </div>
+
     </div>
 
     <script>
@@ -30,11 +74,7 @@
         data: {
           header: 'Todo List',
           newTask: '',
-          tasks: [
-            'Get groceries',
-            'Do the dishes',
-            'Clean the kitchen',
-          ],
+          tasks: [],
           searchQuery: null,
         },
         computed: {
@@ -71,6 +111,7 @@
             this.newTask = '';
           },
           deleteTask: function(index) {
+            if(confirm('Do you want to delete this task?'))
             this.tasks.splice(index, 1);
           },
           updateTask: function(e, task) {
@@ -79,26 +120,164 @@
             e.target.blur();
           },
         },
-        }
-      );
+      });
+
     </script>
 
     <style lang="scss">
       * {
         margin: 0;
         padding: 0;
+        font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
       }
       
       body {
+        width: 100vw;
+        height: 100vh;
         display: flex;
         flex-direction: column;
+        justify-content: center;
         align-items: center;
         background: linear-gradient(90deg, rgba(0,61,89,1) 0%, rgba(21,63,118,1) 0%, rgba(114,160,193,1) 48%);
       }
 
-      .task-form {
-        text-decoration: none;
+      #app {
+        max-width: 400px;
+        background-color: white;
+        border-radius: 5px;
+        padding: 25px;
+        border: 1px solid grey;
+        box-shadow: 1px 2px 10px grey;
       }
+
+      h1 {
+        font-size: 30px;
+        font-weight: 600;
+        margin-bottom: 1rem;
+        text-align: center;
+      }
+
+      .top-bar {
+        display: flex;
+        flex-direction: row;
+      }
+
+      .add-task-form {
+        background-color: #F8F9FA;
+        border: none;
+        border-radius: 3px;
+        box-shadow: 1px 2px 10px grey;
+      }
+
+      .add-task-input {
+        height: 45px;
+        border: none;
+        border-radius: 3px;
+        padding: 0.5rem;
+        background-color:#F8F9FA;
+      }
+
+      .add-task-input:focus {
+        outline: none;
+      }
+
+      .add-task-input:focus::placeholder {
+        color: transparent;
+      }
+
+      .add-task-btn {
+        height: 45px;
+        border: none;
+        border-radius: 0 3px 3px 0;
+        padding-right: 0.5rem;
+        padding-left: 0.5rem;
+        background-color: #F8F9FA;
+        color: #153f76;
+      }
+
+      .add-task-btn:hover {
+        background-color: lightgrey;
+        cursor: pointer;
+      }
+
+      .search-form {
+        border: none;
+        border-radius: 3px;
+        margin-left: 1rem;
+        padding-left: 0.5rem;
+        height: 45px;
+        background-color: #F8F9FA;
+        box-shadow: 1px 2px 10px grey;
+      }
+
+      .search-form:focus {
+        outline: none;
+      }
+
+      .search-form:focus::placeholder {
+        color: transparent;
+      }
+
+      .task-list li {
+        list-style: none;
+        height: 45px;
+        line-height: 45px;
+        position: relative;
+        background-color: #F8F9FA;
+        margin: 1.5rem 0 1.5rem 0;
+        padding: 0 15px;
+        border-radius: 3px;
+        box-shadow: 1px 2px 3px grey;
+      }
+
+      .list-item:focus {
+        outline: none;
+      }
+
+      .buttons {
+        position: absolute;
+        right: 0px;
+        margin-bottom: 8px;
+        text-align: center;
+      }
+
+      .delete-btn {
+        background-color: rgba(218, 1, 45, 0.8);
+        height: 45px;
+        line-height: 45px;
+        width: 45px;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 0 3px 3px 0;
+      }
+
+      .delete-btn:hover {
+        background-color: rgba(218, 1, 45, 0.5);
+        color: white;
+      }
+
+      .save-btn {
+        background-color: rgb(114, 160, 193);
+        height: 45px;
+        line-height: 45px;
+        width: 45px;
+        color: white;
+        border: none;
+        cursor: pointer;
+        border-radius: 0 3px 3px 0;
+      }
+
+      .save-btn:hover {
+        background-color: rgba(114, 160, 193, 0.5);;
+      }
+
+      .footer {
+        display: flex;
+        justify-content: center;
+        margin-top: 1rem;
+      }
+
     </style>
   </body>
 </html>
